updated style properties - made declaration shorter